# flyingeffectsAndroid

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
LanSongSDK/: build.gradle
TextEffect/: build.gradle
TextEffect/src/main/: AndroidManifest.xml
TextEffect/src/main/res/drawable/: panel_bg.xml  seek_arc_control_selector.xml  top_bar_button1.xml
TextEffect/src/main/res/drawable-v24/: checkered_bg.xml
TextEffect/src/main/res/layout/: activity_main.xml  gradient_controls.xml
TextEffect/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
TextEffect/src/main/res/values-night/: themes.xml
album/: build.gradle
album/src/main/: AndroidManifest.xml
album/src/main/res/drawable/: album_checkbox_create_video.xml  album_shape_capture.xml  album_shape_indicator.xml  album_shape_next.xml  album_shape_play_back.xml  album_shape_time_back.xml
album/src/main/res/drawable-hdpi/: checkbox_create_video.xml
album/src/main/res/layout/: album_activity_album_creat_video_light.xml  album_activity_album_dark.xml  album_activity_album_light.xml  album_activity_capture.xml  album_activity_capture_preview.xml  album_content_album.xml  album_item_content_image.xml  album_item_content_video.xml
album/src/main/res/values/: attr.xml  colors.xml  dimens.xml  strings.xml  style.xml
album/src/main/res/values-pt-rBR/: strings.xml
album/src/main/res/values-zh/: strings.xml
album/src/main/res/values-zh-RHK/: strings.xml
app/: beizhu.txt  build.gradle  feishan.jks
app/libs/: Baidu_MobAds_SDK-release_v5.98.aar  Market-v1.2.aar  NTADSDK-v2.2.9.aar  NTADSDK-v2.3.0.aar  NTADSDK-v2.3.5.aar  NTADSDK-v2.3.6.aar  NTADSDK-v2.4.1.aar  NTADSDK-v2.4.3.aar  NTADSDK-v2.4.7.aar  NTADSDK-v2.4.8.aar  NTADSDK-v2.5.2.aar  NTADSDK-v2.5.4.aar  NTADSDK-v2.5.7.aar  NTADSDK-v2.5.9.aar  NTADSDK-v2.6.0.aar  NTADSDK-v2.6.2.aar  NTADSDK-v2.6.4.aar  NTADSDK-v2.6.5.aar  NTADSDK-v2.6.6.aar  bxmsdk-release-3.4.7.aar  kaijia_ad_sdk_1.6.0.20.aar  kaijia_ad_sdk_1.7.1.22.aar  kaijia_ad_sdk_1.8.1.25.aar  klevinSDK_1.3.1.12.aar  ks_adsdk-3.0.0.aar  ks_adsdk-3.3.1.aar  mobad_normal_pub_333_2019_11_11.aar  monitorsdk-1.0.6.aar  open_ad_sdk_3.2.0.2.aar  open_ad_sdk_3.4.0.3.aar  open_ad_sdk_v2.7.0.0.aar  shanyan_sdk_v2.3.1.3.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: aa.json  jiu_LanSongSDK_android5.key  phonograph1.json  phonograph2.json  shoot_btn.json  supplierconfig.json
app/src/main/res/anim/: activity_anim_in.xml  activity_anim_out.xml  translate_dialog_in.xml  translate_dialog_out.xml
app/src/main/res/color/: selector_home_tab_text_color.xml  selector_jade_radio_color.xml  selector_jade_tv_color.xml
app/src/main/res/drawable/: add_music.xml  back_delete_btn.xml  back_redact.xml  base_blue_bk.xml  bg_adjust_seek_bar.xml  button_signout.xml  check_update_botton.xml  choose_music_translation_bj.xml  create_bj_gray_title.xml  create_bj_green_title.xml  csj_ad_bj.xml  cursor.xml  cut_video_matting.xml  cut_video_no_matting.xml  download_bj.xml  home_page_gradient.xml  home_strok_message_count.xml  ic_jade_close.xml  ic_jade_complete.xml  ic_jade_del.xml  ic_jade_delete_font.xml  ic_jade_delete_my_style.xml  ic_jade_edit.xml  ic_jade_font_download.xml  ic_jade_forbidden.xml  ic_jade_save_font.xml  ic_vip_back.xml  jade_shape_adjust_background.xml  jade_shape_gradient_type_linear.xml  jade_shape_gradient_type_ra.xml  jade_shape_gradient_type_sw.xml  jade_shape_input_edit.xml  login_button.xml  login_button_forbidden.xml  login_weixin.xml  message_content_bk.xml  message_focus.xml  message_focus_20.xml  message_focus_gray20.xml  official.xml  (+74 more)
app/src/main/res/layout/: act_about.xml  act_ad_hint.xml  act_background_search.xml  act_choose_background_template.xml  act_choose_music.xml  act_comment_black.xml  act_creation_template_edit.xml  (+181 more)
faceunity/: build.gradle  local.properties
gradle/wrapper/: gradle-wrapper.properties
paylib/: build.gradle
paylib/src/main/: AndroidManifest.xml
segjni/: .gitignore  build.gradle
segjni/src/main/: AndroidManifest.xml
segjni/src/main/cpp/: CMakeLists.txt  megvii_seg_jni_new.cpp
segjni/src/main/cpp/include/: SEG_Megvii_Api.h
sxve/: build.gradle
sxve/libs/: engine.aar
sxve/src/main/: AndroidManifest.xml
(+1224 files in other folders)
